# Cyber_Threat_Hunting_Agent

./: .gitignore  AGENT_DOCUMENTATION.md  CHANGELOG.md  README.md  hacknocturn.md  mock_generator.py  project_structure.md  pyproject.toml
.github/workflows/: deploy.yml
agent/: llm_client.py  main.py  rules_engine.py
backend/: api.py  db.py  logger.py  main.py
dashboard/: app.py
data/: schema.sql
