[project]
name = "cyber-threat-hunting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.0.0",
    "fastapi>=0.135.1",
    "pandas>=2.3.3",
    "requests>=2.31.0",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
